# gecko-dev

./: .clang-format-ignore  Cargo.toml
.cargo/: config.in
dom/bindings/: moz.build
dom/chrome-webidl/: ArithmeticScaffolding.webidl  GeometryScaffolding.webidl  RondpointScaffolding.webidl  SpritesScaffolding.webidl  TodolistScaffolding.webidl  UniFFI.webidl  UniFFIPointer.webidl  moz.build
supply-chain/: audits.toml  config.toml
toolkit/: moz.configure
toolkit/components/: moz.build
toolkit/components/uniffi-bindgen-gecko-js/: Cargo.toml  config.toml  mach_commands.py
toolkit/components/uniffi-bindgen-gecko-js/fixtures/: ArithmeticScaffolding.cpp  Geometry.jsm  README.md  moz.build
toolkit/components/uniffi-bindgen-gecko-js/fixtures/tests/: test_rondpoint.js
toolkit/components/uniffi-bindgen-gecko-js/fixtures/tests/xpcshell/: test_object_free.js  test_sprites.js  test_todolist.js  test_type_checking.js  xpcshell.ini
toolkit/components/uniffi-bindgen-gecko-js/src/: ci_list.rs  lib.rs
toolkit/components/uniffi-bindgen-gecko-js/src/render/: cpp.rs  js.rs  mod.rs  webidl.rs
toolkit/components/uniffi-bindgen-gecko-js/src/templates/: Scaffolding.cpp  Scaffolding.h  Scaffolding.webidl  UniFFIScaffolding.cpp
toolkit/components/uniffi-bindgen-gecko-js/src/templates/js/: Enum.jsm  Error.jsm  Helpers.jsm  Int16.jsm  Int32.jsm  Int8.jsm  Object.jsm  Strings.jsm  Types.jsm  UInt16.jsm  UInt32.jsm  UInt8.jsm  macros.jsm  wrapper.jsm
toolkit/components/uniffi-js/: OwnedRustBuffer.cpp  OwnedRustBuffer.h  ScaffoldingCall.h  ScaffoldingConverter.h  UniFFI.cpp  (+10 more)
(+6 files in other folders)
