[package]
name = "uniffi-bindgen-gecko-js"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "uniffi-bindgen-gecko-js"
path = "src/main.rs"

[dependencies]
anyhow = "1"
askama = { version = "0.11", default-features = false, features = ["config"] }
clap = { version = "3.1", features = ["std", "derive"] }
extend = "1.1"
heck = "0.4"
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "a8f49198773e61fb3f31dbd56473844968708714" }
serde = "1"
toml = "0.5"
camino = "1.0.8"